[package]
name = "mister_ojd_server"
version = "0.1.0"
authors = ["Fenrir <fenrirwolf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gilrs-core = "0.3"
local_ipaddress = "0.1"
serde_json = "1.0"