[package]
name = "mister_ojd_server"
version = "0.1.0"
authors = ["Fenrir <fenrirwolf@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
daemonize = "0.4"
inotify = "0.9"
local_ipaddress = "0.1"
nix = "0.20"
serde_json = "1.0"

[profile.release]
lto = true
